tools/tests/errors/surf_arity_06.experr
function must return Dict, got List
